# app/controllers/app/workspaces/data_sources/queries_controller.rb
@@ -5,7 +5,6 @@ module App
     module DataSources
       class QueriesController < ApplicationController # rubocop:disable Metrics/ClassLength
         before_action :require_authentication!
-        before_action :authorize_query_write_access!, only: %i[create update]
         before_action :authorize_query_destroy_access!, only: %i[destroy]
         before_action :prepare_query_editor, only: %i[index show]
 
@@ -15,6 +14,7 @@ module App
             name: params[:name].to_s.presence,
             data_source:
           )
+          @query_editor_state = build_query_editor_state(query: @query)
         end
 
         def show
@@ -28,24 +28,7 @@ module App
             viewer: current_user,
             workspace:
           ).call
-        end
-
-        def create
-          query = Query.create(
-            query: query_params[:query],
-            author: current_user,
-            data_source:
-          )
-          redirect_to app_workspace_data_source_query_path(workspace, data_source, query)
-        end
-
-        def update
-          result = Queries::UpdateService.new(workspace:, actor: current_user, attributes: query_update_payload).call
-          reconcile_chat_query_cards!(result:) if result.success? && result.query.present?
-          toast = query_update_toast(result:)
-          flash[:toast] = toast if toast
-
-          redirect_to query_update_redirect_path(result:)
+          @query_editor_state = build_query_editor_state(query: @query, query_chat_source: @query_chat_source)
         end
 
         def destroy
@@ -74,8 +57,6 @@ module App
           @query_schema_groups = query_schema_groups_for(@data_source)
           @query_schema_options = query_schema_options(@query_schema_groups)
           @default_query_schema = @query_schema_options.first&.last
-          @available_visualization_types = Visualizations::ChartRegistry.available
-          @visualization_theme_library = Visualizations::ThemeLibraryService.call(workspace:)
         end
 
         def query_schema_groups_for(selected_data_source)
@@ -135,30 +116,6 @@ module App
           nil
         end
 
-        def query_params
-          params.permit(:query, :name)
-        end
-
-        def query_update_payload
-          {
-            'query_id' => query.id,
-            'sql' => query_params[:query].presence,
-            'name' => query_params[:name].presence
-          }.compact
-        end
-
-        def query_redirect_tab
-          return 'settings' if query_params[:name]
-
-          nil
-        end
-
-        def authorize_query_write_access!
-          return if can_write_queries?(workspace:)
-
-          deny_workspace_access!(workspace:)
-        end
-
         def authorize_query_destroy_access!
           return if can_destroy_query?(workspace:, query:)
 
@@ -174,42 +131,14 @@ module App
           redirect_to app_workspace_queries_path(workspace)
         end
 
-        def query_update_toast(result:)
-          return already_saved_query_toast(result:) if result.success? && result.update_outcome == 'already_saved'
-          return if result.success?
-
-          {
-            type: 'error',
-            title: I18n.t('toasts.workspaces.queries.update_failed.title'),
-            body: result.message
-          }
-        end
-
-        def query_update_redirect_path(result:)
-          app_workspace_data_source_query_path(
-            workspace,
-            data_source,
-            redirect_query(result:),
-            tab: query_redirect_tab
+        def build_query_editor_state(query:, query_chat_source: nil)
+          QueryEditor::StateBuilder.call(
+            workspace:,
+            query:,
+            data_source: query.data_source || data_source,
+            query_chat_source:,
+            active_tab: params[:tab]
           )
-        end
-
-        def redirect_query(result:)
-          return query unless result.success? && result.query.present?
-
-          result.query
-        end
-
-        def already_saved_query_toast(result:)
-          {
-            type: 'info',
-            title: I18n.t('toasts.workspaces.queries.already_saved.title'),
-            body: I18n.t('toasts.workspaces.queries.already_saved.body', name: result.query.name)
-          }
-        end
-
-        def reconcile_chat_query_cards!(result:)
-          Queries::ChatQueryCardReconciler.new(query: result.query).call
         end
       end # rubocop:enable Metrics/ClassLength
     end
